css (fixed start and next button alignment)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,6 +244,12 @@ a {
         padding-left: 10px;
     }
 
+    .start-next-area {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
     #final-score {
         width: 100%;
         font-size: 2rem;
@@ -253,10 +259,6 @@ a {
         width: 100%;
         text-align: center;
         margin: 5px;
-    }
-
-    #start-next-area {
-        width: 100%;
     }
 
     #score-area {
